// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshots > changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod cLCTCz gRIuSL aje-btn aje-btn--secondary is-auto"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > loading completed state 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod cLCTCz gRIuSL aje-btn aje-btn--primary is-auto"
    data-loading="true"
    type="button"
  >
    <div
      class="sc-gEvDqW foZKdl aje-loader aje-loader--spinner is-medium"
      data-placement="absolute center"
    >
      <span
        class="sc-fqkwJk eiXPrv aje-checkmark is-medium"
        data-testid="checkmark"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > loading state 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod cLCTCz gRIuSL aje-btn aje-btn--primary is-auto"
    data-loading="true"
    type="button"
  >
    <div
      class="sc-gEvDqW foZKdl aje-loader aje-loader--spinner is-medium"
      data-placement="absolute center"
    >
      <div
        class="sc-aYaIB blILUf aje-flex"
      >
        <div
          class="sc-dcJtft cYhlUP aje-spinner is-medium"
        >
          <svg
            class="sc-iGgVNO HkWEM"
            data-testid="spinner-svg"
            viewBox="25 25 50 50"
          >
            <circle
              class="sc-gsFSjX jjboCs"
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-width="0.5em"
            />
          </svg>
        </div>
      </div>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod cLCTCz gRIuSL aje-btn aje-btn--primary is-auto"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
